fixes cover ctas alignment

--- a/wp-content/themes/studio-903/components/cover.scss
+++ b/wp-content/themes/studio-903/components/cover.scss
@@ -79,6 +79,9 @@
     }
 
     &__ctas {
+        max-width: fit-content;
+        margin: 0 auto;
+
         > .button,
         > .first-contact {
             display: inline-block;
